# boulderdash

./: .gitignore  Cargo.toml  Dockerfile  README.md  app.py  dev_watch_and_build.ps1
src/: lib.rs  screen_title.rs
src/game/: action.rs  diamond.rs  game.rs  grid.rs  mod.rs  player.rs  rock.rs  tile.rs  wall.rs
src/game/actions/: movement.rs
src/game/behaviors/: collidable.rs  entity.rs  fallable.rs  mod.rs  renderable.rs
src/game/display/: action.rs  animation.rs  mod.rs  overlay.rs  scroller.rs  zone.rs
src/game/enums/: action_type.rs  animation_type.rs  field.rs  mod.rs  movement.rs
src/game/interfaces/: collidable.rs  entity.rs  fallable.rs  movable.rs  renderable.rs
static/: main.js  style.css
static/maps/: level_1.bbcff  level_2.bbcff
templates/: index.html
